Correções pós aula 14/11